增加周报CRUD
